--- a/26. 树的子结构(1)(1)(1)(1)(3)(2).md
+++ b/26. 树的子结构(1)(1)(1)(1)(3)(2).md
@@ -1103,3 +1103,13 @@ private:
 ```
 
 ![image.png](https://pic.leetcode-cn.com/1612681729-IhAKvb-image.png)
+
+### 空类占多少字节？C++ 编译器会给一个空类自动生成哪些函数？
+
+空类声明时，编译器不会生成任何成员函数，指挥生成一个字节的占位符。
+
+当空类A定义对象时，sizeof(A)仍然是1，但是编译器会生成6 个成员函数：缺省的构造函数、拷贝构造函数、析构函数、赋值运算符、两个取址运算符。
+
+### C++ 类对象的初始化顺序
+
+https://programmercarl.com/0027.%E7%A7%BB%E9%99%A4%E5%85%83%E7%B4%A0.html#_27-%E7%A7%BB%E9%99%A4%E5%85%83%E7%B4%A0
