--- a/26. 树的子结构(1)(1)(1)(1)(3)(2).md
+++ b/26. 树的子结构(1)(1)(1)(1)(3)(2).md
@@ -70,9 +70,14 @@
 
 从作用域出发： 
 
-1. **全局变量：**有全局作用域，**只需要在一个源文件中定义即可作用域所有的源文件**(其他不含全局变量定义的源文件需要用**extern**关键字再次声明这个全局变量)
+1. **全局变量：**有全局作用域，**只需要在一个源文件中定义即可作用于所有的源文件**(其他不含全局变量定义的源文件需要用**extern**关键字再次**声明**这个全局变量(或者引用同一个头文件，头文件中用extern声明))
+
+   注意：C++中**变量声明必须同时满足两个条件(①使用extern关键字 ②不能给变量赋初值)**，否则就是变量定义
+
 2. **静态全局变量**：有文件作用域。与全局变量的区别在于如果程序包含多个源文件的话，静态全局变量**只作用于定义它的文件**，不作用于其他文件。即便其他文件中定义同名静态全局变量，他们也是不同的变量。
+
 3. **局部变量**：局部作用域，只在函数执行期间存在，**函数的一次调用结束后它被回收**。
+
 4. **静态局部变量**：局部作用域，只被初始化一次，**自从被初始化后直到程序运行结束都存在**，但只对定义自己的函数体始终可见。
 
 从分配内存空间出发： 
@@ -85,7 +90,7 @@
 
 ## 为什么不能将全局变量定义在头文件中？
 
-​	当该头文件被多个文件include时，该头文件的全部变量会被定义多次，导致重复定义。
+​	当该头文件被多个文件include时，该头文件的全部变量会被定义多次，导致重复定义。(**用extern int a声明而不是int a定义可以解决问题**)
 
 ## 如何限制类的对象只能在堆上/只能在栈上创建？
 
@@ -133,7 +138,7 @@
 
 ​	b.解决方案：
 
-​		将构造函数设置为protected，然后在public里提供一个静态的create函数，在create里使用new来完成构造，而不是在类的外部使用new构造。另外，析构函数设为protected。
+​		将构造函数设置为protected，然后在public里提供一个静态的create函数，+，析构函数设为protected。
 
 ```
 class A
@@ -204,14 +209,14 @@ void fun1()
 ```
 void ex{
 	auto e1 = std::make_shared<Entity>();
-	std:;cout<<e1.use_count()<<std::endl;	//输出1，e1初始化后其usecount=1
+	std::cout<<e1.use_count()<<std::endl;	//输出1，e1初始化后其usecount=1
 	{	//作用域，出了这个花括号范围后都会被销毁。
 		auto e2 = e1;
-		std:;cout<<e1.use_count()<<std::endl;	//输出2，e1拷贝给e2后其usecount=2
+		std::cout<<e1.use_count()<<std::endl;	//输出2，e1拷贝给e2后其usecount=2
 		auto e3 = std::move(e2);
-		std:;cout<<e1.use_count()<<std::endl;	//输出2，把e2的所有权通过 move函数转移给e3，不影响usecount
+		std::cout<<e1.use_count()<<std::endl;	//输出2，把e2的所有权通过 move函数转移给e3，不影响usecount
 	}
-	std:;cout<<e1.use_count()<<std::endl;	//输出1，除了作用域后e2和e3销毁，但是e2本身已转移，因此只有e3的销毁有用，usecount-1
+	std::cout<<e1.use_count()<<std::endl;	//输出1，除了作用域后e2和e3销毁，但是e2本身已转移，因此只有e3的销毁有用，usecount-1
 }
 ```
 
