--- a/26. 树的子结构(1)(1)(1)(1)(3)(2).md
+++ b/26. 树的子结构(1)(1)(1)(1)(3)(2).md
@@ -517,7 +517,7 @@ int main()
 
 ## static的作用
 
-1.作用于局部变量： static修饰的局部变量，在初始化之后直到程序运行结束才销毁。**此外，static修饰的局部变量只会被初始化一次**。
+1.作用于局部变量： static修饰的局部变量，在初始化之后直到程序运行结束才销毁。**此外，static修饰的局部变量只会被初始化一次(函数体内部定义变量，该变量从程序开始到结束只会分配一次内存，当再次进入该函数的时候，其值不变，仍为上次退出时的值)**。
 
 ​	值得注意的是，**static修饰的局部变量的地址作为函数的返回值时，恰巧是能得到正确结果的，**因为静态全局变量是不随着函数作用域的离开而销毁的。
 
@@ -1020,7 +1020,7 @@ https://blog.csdn.net/xuzhangze/article/details/78374890
 
 ​			b.重载原来的构造函数  animal(){}
 
-### 构造函数、析构函数是否需要定义成虚函数？为什么？
+## 构造函数、析构函数是否需要定义成虚函数？为什么？
 
 (1)构造函数不定义为虚函数：
 
@@ -1032,11 +1032,11 @@ https://blog.csdn.net/xuzhangze/article/details/78374890
 
 ​	当**用基类指针操作派生类，在析构时防止只析构基类而不析构派生类的状况发生。**
 
-### 如何减少构造函数开销？
+## 如何减少构造函数开销？
 
 在**构造函数中使用类初始化列表**，使数据成员在构造的同时完成初始值的设置。
 
-### 多重继承时会出现什么状况？如何解决？
+## 多重继承时会出现什么状况？如何解决？
 
 多重继承容易出现的问题：命名冲突和数据冗余问题。
 
@@ -1109,11 +1109,28 @@ private:
 
 ![image.png](https://pic.leetcode-cn.com/1612681729-IhAKvb-image.png)
 
-### 空类占多少字节？C++ 编译器会给一个空类自动生成哪些函数？
+## 空类占多少字节？C++ 编译器会给一个空类自动生成哪些函数？
 
 空类声明时，编译器不会生成任何成员函数，指挥生成一个字节的占位符。
 
 当空类A定义对象时，sizeof(A)仍然是1，但是编译器会生成6 个成员函数：缺省的构造函数、拷贝构造函数、析构函数、赋值运算符、两个取址运算符。
 
-### C++ 类对象的初始化顺序
+## C++ 类对象的初始化顺序
 
+(1)构造函数的调用顺序：
+
+​	①按派生列表中声明的顺序，依次调用基类构造函数
+
+​	②按照派生类中成员变量的声明顺序，依次调用派生类中成员变量所属类的构造函数。
+
+​	③执行派生类自己的构造函数
+
+(2)由此可得，类对象的初始化顺序：基类构造函数->派生类成员变量的构造函数->自身构造函数
+
+## 如何禁止一个类被实例化？
+
+(1)在类中定义一个纯虚函数，使该类成为抽象基类，无法被实例化
+
+(2)**将类的构造函数声明为private或者直接= delete**
+
+## 实例化一个对象需要哪几个阶段
