--- a/26. 树的子结构(1)(1)(1)(1)(3)(2).md
+++ b/26. 树的子结构(1)(1)(1)(1)(3)(2).md
@@ -138,7 +138,7 @@
 
 ​	b.解决方案：
 
-​		将构造函数设置为protected，然后在public里提供一个静态的create函数，+，析构函数设为protected。
+​		将构造函数设置为protected，然后在public里提供一个**静态的create函数**和普通的destory()函数，析构函数设为protected。
 
 ```
 class A
